feat: Added jacoco configuration for code coverage report.